#838 Fix language select view on safari (mobile)

--- a/apihub-root/lightweight-pwa/css/main.css
+++ b/apihub-root/lightweight-pwa/css/main.css
@@ -757,12 +757,11 @@ body {
     }
 
     .modal-content .languages-container .language-item-container input {
-        left: 0px;
-        width: 100%;
+        width: 10%;
         position: relative;
         height: 65%;
-        top: -100%;
-        margin-left: 45%;
+        top: -130%;
+        margin-left: 95%;
     }
 
     .proceed-button {
